--- a/play/index.html
+++ b/play/index.html
@@ -9,12 +9,12 @@
 
 		<title>Moon | Playground</title>
 
-		<link rel="shortcut icon" href="../img/logo.png"/>
+		<link rel="shortcut icon" href="/moon/img/logo.png"/>
 
-		<link rel="stylesheet" type="text/css" href="../css/lib/grain.css" />
-		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
-		<link rel="stylesheet" type="text/css" href="./css/index.css" />
-		<link rel="stylesheet" type="text/css" href="./css/lib/codemirror.css" />
+		<link rel="stylesheet" type="text/css" href="/moon/css/lib/grain.css" />
+		<link rel="stylesheet" type="text/css" href="/moon/css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="/moon/play/css/index.css" />
+		<link rel="stylesheet" type="text/css" href="/moon/play/css/lib/codemirror.css" />
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -30,13 +30,13 @@
 		<div class="container">
 			<div class="nav">
 				<div class="nav-home">
-					<h2 class="nav-home"><a href="/">Moon</a></h2>
+					<h2 class="nav-home"><a href="/moon">Moon</a></h2>
 				</div>
 
 				<div class="nav-items">
-					<a href="/doc/guide.html">Guide</a>
-					<a href="/play/index.html">Playground</a>
-					<a href="/doc/examples.html">Examples</a>
+					<a href="/moon/doc/guide.html">Guide</a>
+					<a href="/moon/play">Playground</a>
+					<a href="/moon/doc/examples.html">Examples</a>
 					<a href="https://github.com/kbrsh/moon">GitHub</a>
 				</div>
 			</div>
@@ -47,10 +47,10 @@
 			</div>
 		</div>
 
-		<script src="./js/lib/codemirror.js"></script>
-		<script src="./js/lib/xml.js"></script>
-		<script src="./js/lib/javascript.js"></script>
-		<script src="./js/lib/moon-compiler.js"></script>
-		<script src="./js/index.js"></script>
+		<script src="/moon/play/js/lib/codemirror.js"></script>
+		<script src="/moon/play/js/lib/xml.js"></script>
+		<script src="/moon/play/js/lib/javascript.js"></script>
+		<script src="/moon/play/js/lib/moon-compiler.js"></script>
+		<script src="/moon/play/js/index.js"></script>
 	</body>
 </html>
