update links again for github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="head">
-				<img src="./img/logo.png" alt="Moon Logo"/>
+				<img src="/moon/img/logo.png" alt="Moon Logo"/>
 				<h1>The minimal & fast library for functional user interfaces</h1>
 				<a class="linkPlain" href="/moon/doc/guide.html"><button class="buttonPrimary">GET STARTED</button></a>
 				<a class="linkPlain" href="/moon/play"><button class="buttonSecondary">PLAYGROUND</button></a>
@@ -96,8 +96,8 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 					<p>Since Moon is so simple at its core, where it creates an abstraction to allow drivers to handle input and output, it <b>only weighs 1kb</b> minified and gzipped. On top of that, it is specifically optimized for JavaScript engines to perform fast virtual DOM diffing and DOM operations.</p>
 				</div>
 				<div class="feature-media">
-					<img class="feature-media-image" src="/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
-					<a class="linkPlain" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
+					<img class="feature-media-image" src="/moon/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
+					<a class="linkPlain" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/moon/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
 				</div>
 			</div>
 
