link to results

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 				</div>
 				<div class="feature-media">
 					<img class="feature-media-image" src="/moon/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
-					<a class="linkPlain" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/moon/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
+					<a class="linkPlain" href="https://rawgit.com/krausest/js-framework-benchmark/master/webdriver-ts-results/table.html"><img class="feature-media-image" src="/moon/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
 				</div>
 			</div>
 
