new style and begin landing

--- a/play/index.html
+++ b/play/index.html
@@ -26,26 +26,20 @@
 		</script>
 	</head>
 
-	<body>
-		<div class="container">
-			<div class="nav">
-				<div class="nav-home">
-					<h2 class="nav-home"><a href="/">Moon</a></h2>
-				</div>
+	<body class="a-x-c a-0-x-s a-0-y-l-c a-1-x-e a-1-y-l-c m-x-5 m-y-5">
+		<h2><a href="/" class="c-f-black b-n">Moon</a></h2>
 
-				<div class="nav-items">
-					<a href="/doc/guide.html">Guide</a>
-					<a href="/play">Playground</a>
-					<a href="/doc/examples.html">Examples</a>
-					<a href="https://github.com/kbrsh/moon">GitHub</a>
-				</div>
-			</div>
-
-			<div class="playground">
-				<div id="editor"></div>
-				<iframe id="result"></iframe>
-			</div>
+		<div class="m-x-3">
+			<a href="/guide" class="c-f-black b-n">Guide</a>
+			<a href="/play" class="c-f-black b-n">Playground</a>
+			<a href="/examples" class="c-f-black b-n">Examples</a>
+			<a href="https://github.com/kbrsh/moon" class="c-f-black b-n">GitHub</a>
 		</div>
+
+		<div class="a-b"></div>
+
+		<div id="editor" class="s-x-26 s-y-30"></div>
+		<iframe id="result" class="s-x-26 s-y-30"></iframe>
 
 		<script src="/play/js/lib/codemirror.js"></script>
 		<script src="/play/js/lib/xml.js"></script>
