--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="a-b"></div>
 
 		<div class="s-x-26 m-y-5">
-			<p>Applications today are complex, built on top of frameworks that create arbitrary abstractions fundamentally based on mutability and imperative code.</p>
+			<p>Applications today are complex, built on top of frameworks that create abstractions fundamentally based on mutability and imperative code.</p>
 			<p>They introduce concepts like reactivity or local state or algebraic effects, all in attempt to represent views as a function of state.</p>
 			<p>In reality, applications are much more sophisticated and require third-party libraries for any effects other than updating a view.</p>
 			<p>Moon is a novel approach to web applications based on pure functions. An application is a function that uses <b>drivers</b>, programs that provide an interface to the real world.</p>
