update grain & moon

--- a/play/index.html
+++ b/play/index.html
@@ -11,10 +11,11 @@
 
 		<link rel="shortcut icon" href="/img/logo.png"/>
 
-		<link rel="stylesheet" type="text/css" href="/css/lib/grain.css" />
-		<link rel="stylesheet" type="text/css" href="/css/styles.css" />
-		<link rel="stylesheet" type="text/css" href="/play/css/index.css" />
-		<link rel="stylesheet" type="text/css" href="/play/css/lib/codemirror.css" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"/>
+		<link rel="stylesheet" type="text/css" href="/css/lib/grain.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
+		<link rel="stylesheet" type="text/css" href="/play/css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="/play/css/lib/codemirror.css"/>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
