--- a/guide.html
+++ b/guide.html
@@ -11,10 +11,10 @@
 
 		<link rel="shortcut icon" href="/img/logo.png"/>
 
-		<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="/css/lib/grain.css" />
-		<link rel="stylesheet" type="text/css" href="/css/styles.css" />
-		<link rel="stylesheet" type="text/css" href="/css/post.css" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"/>
+		<link rel="stylesheet" type="text/css" href="/css/lib/grain.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/post.css"/>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
