--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 		<link rel="shortcut icon" href="/img/logo.png"/>
 
-		<link rel="stylesheet" type="text/css" href="/css/lib/grain.css" />
-		<link rel="stylesheet" type="text/css" href="/css/styles.css" />
-		<link rel="stylesheet" type="text/css" href="/css/index.css" />
+		<link rel="stylesheet" type="text/css" href="/css/lib/grain.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/index.css"/>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
