--- a/view.html
+++ b/view.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="The minimal & fast library for functional user interfaces.">
+		<meta name="description" content="The purely functional user interface library that's fast, tiny, and intuitive.">
 		<meta name="author" content="Kabir Shah">
 
 		<title>View | Moon</title>
